# amati_test

./: .gitignore  .gitmodules  README2  myStream.sqlite
bash/Script/: anim.sh  dnd.txt  eth0.sh  kw  megaupload  megaupload.sh  mount_fuse.sh  mount_smb.sh  notify.txt  prova.txt  script avaya genialloyd.txt  sipsak.sh  test.sh  tunneling.sh
c/: extconf.rb  sofia-sip.c  test.c
c/sofia_sip/: extconf.rb  sofia_sip.c
cpp/: thread.c
cpp/irc_bot/: configure.ac
cpp/irc_bot/src/: Makefile.am  irc_bot.cpp  irc_bot.h  main.cpp  my_socket.cpp  my_socket.h  utils.cpp  utils.h
java/BrainGameLite/: AndroidManifest.xml  TODO  cert  default.properties
java/GuidaMi/: AndroidManifest.xml
java/MasterMind Comix/: .classpath  .project  AndroidManifest.xml  cert  default.properties  project.properties
java/MemoPuzzle/: AndroidManifest.xml
java/MyWorld/: AndroidManifest.xml  project.properties
java/Prova/: AndroidManifest.xml  default.properties
java/ProvaMenu/: AndroidManifest.xml
java/RestDownloader/: .classpath  .project
java/andengineexamples/: AndroidManifest.xml
javascript/: index.html
javascript/html5/: canvas.css  canvas.js
javascript/widget/: index.html
python/: apns_api2_http_test.py  irc_bot.py  test.py
python/phone/: README  gui.glade  gui.glade.bak  gui.py  main.py  phone.cfg  phone.ui  pjsip.py  stack_interface.py
python/portale_sport/: dbps.sqlite3  settings.py  urls.py
python/r-box/: rbox.spec
ruby/: CopiaCanali.rb  DeleteOldCanali.rb  InitCanali.rb  ScaricaLogo.rb  UpdateCanali.rb  UpdateLogoUrl.rb  cmd_msg.rb  core.rb  database.rb  downloader_server.rb  dump.sql  extconf.rb  gui.rb  gui.ui  irc_bot.rb  ircbot.rb  mongotest.rb  mud.db  mud.rb  mud_db.backup  npc.rb  person.c  place.rb  rdoc.sh  server.rb  test.rb  test.sh  user.rb  utils.rb
ruby/db/: mud_db.backup
ruby/doc/: created.rid  fr_class_index.html  fr_file_index.html  fr_method_index.html  index.html
ruby/fdtgui/: example_laucher.sh  gui.ui  main.rb  prova.xml  prova2.xml  settings.sql  settings.sqlite  system_settings.rb
ruby/lib/: database.rb  ircbot.rb  utils.rb
ruby/mudonline/: rdoc.sh
ruby/npc/: caronte.xml
ruby/test/: build.rb
ruby/virtual_table/: cart_secret.patch  client.rb  server.rb
(+483 files in other folders)
